# kiwoom-trading-platform

./: .env.example  .gitignore  Dockerfile  INSTALL_UV.md  README.md  README_QUICK_START.md  docker-compose.yml  main.py  pyproject.toml  test_api.py
alembic/: env.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  router.py
app/client/: __init__.py  base.py  rest_client.py  websocket_client.py
app/core/: __init__.py  constants.py  database.py  logging.py  security.py
app/core/config/: __init__.py  base.py  dev.py  prod.py  test.py
app/modules/: __init__.py
app/modules/auth/: api.py  models.py  schemas.py  service.py
app/modules/chart/: __init__.py
app/modules/condition/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
app/scheduler/: __init__.py  config.py  jobs.py  tasks.py
app/shared/: __init__.py
docs/: API_SPECIFICATION.md  API_VERIFICATION.md  CONDITION_SEARCH_GUIDE.md  CONDITION_SEARCH_TEST_GUIDE.md  DEVELOPMENT_STATUS.md  ENV_SETUP.md  GITIGNORE_COMPLETE.md  GITIGNORE_IMPROVEMENTS.md  IMPLEMENTATION_DETAILS.md  KIWOOM_API_CORRECTION.md  KIWOOM_API_FINAL_VERIFICATION.md  KIWOOM_TOKEN_RESPONSE.md  PRD.md  PROJECT_PROGRESS.md  SESSION_SUMMARY.md  TOKEN_MANAGEMENT.md  TOKEN_REUSE_PATTERN.md  UV_USAGE.md  WEBSOCKET_CONDITION_LIST.md  WEBSOCKET_TEST_GUIDE.md  접근토큰발급_샘플_코드.md  조건검색_목록조회_샘플코드.md  조건검색_요청_일반_샘플코드.md  폴더구조.md
scripts/: README_SCRIPTS.md  init_db.py  start_scheduler.py  test_condition_search.py  test_token.py  test_websocket.py
tests/e2e/: __init__.py
(+14 files in other folders)
